Add pancake page and fix typo in lasagna page

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -15,7 +15,7 @@
         <ul>
             <li>Italian sausage</li>
             <li>Lean ground beef</li>
-            <li>One onion</li>
+            <li>An onion</li>
             <li>Two cloves of garlic</li>
             <li>A can of crushed tomatoes</li>
             <li>Two cans of tomato sauce</li>
