--- a/recipes/pancake.html
+++ b/recipes/pancake.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Pancake</h1>
         <p>This easy pancake recipe doesn't require much thought early in the morning and the pancakes taste great!</p>
-        <img src="https://images-gmi-pmc.edge-generalmills.com/df109202-f5dd-45a1-99b4-f10939afd509.jpg">
+        <img width="500px" alt="pancake" src="https://images-gmi-pmc.edge-generalmills.com/df109202-f5dd-45a1-99b4-f10939afd509.jpg">
         <h2>Description</h2>
         <p>This quick and easy pancake recipe puts the store-bought stuff to shame.</p>
         <h2>Ingredients</h2>
