stylize entire website with only CSS

--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -4,15 +4,16 @@
     <head>
         <meta charset="utf-8">
         <title>Chocolate Chip Cookies</title>
+        <link href="../styles.css" rel="stylesheet">
     </head>
     <body>
-        <h1>Chocolate Chip Cookies</h1>
-        <p>This chocolate chip cookie recipe makes delicious cookies with crisp edges and chewy middles.</p>
+        <h1 class="recipe-title">Chocolate Chip Cookies</h1>
+        <p class="recipe-subtitle">This chocolate chip cookie recipe makes delicious cookies with crisp edges and chewy middles.</p>
         <img width="500px" alt="chocolate chip cookies" src="https://images.aws.nestle.recipes/original/5b069c3ed2feea79377014f6766fcd49_Original_NTH_Chocolate_Chip_Cookie.jpg">
-        <h2>Description</h2>
+        <h2 class="recipe-heading">Description</h2>
         <p>This chocolate chip cookie recipe is truly the best. Just take it from the 14,000 members of the allrecipes' community who have given it rave reviews! These chocolate chip cookies are beloved because they're soft, chewy, and absolutely irresistible. Our top-rated recipe for chocolate chip cookies will quickly become your go-to.</p>
-        <h2>Ingredients</h2>
-        <ul>
+        <h2 class="recipe-heading">Ingredients</h2>
+        <ul class="unordered-list">
             <li>Two sticks of butter</li>
             <li>White and brown sugars</li>
             <li>Eggs</li>
@@ -24,8 +25,8 @@
             <li>Chocolate chips</li>
             <li>Nuts (optional)</li>
         </ul>
-        <h2>Steps</h2>
-        <ol>
+        <h2 class="recipe-heading">Steps</h2>
+        <ol class="ordered-list">
             <li>Beat the butter and sugars, then beat in the eggs and vanilla.</li>
             <li>Dissolve the baking soda in hot water and add to the mixture.</li>
             <li>Stir in the flour, chocolate chips, and walnuts.</li>
