--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
+        <link href="styles.css" rel="stylesheet">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
+        <h1 class="index-title">Odin Recipes</h1>
+        <ul class="index-list">
             <li><a href="./recipes/lasagna.html">Lasagna</a></li>
             <li><a href="./recipes/pancake.html">Pancake</a></li>
             <li><a href="./recipes/cookies.html">Chocolate Chip Cookies</a></li>
