--- a/recipes/pancake.html
+++ b/recipes/pancake.html
@@ -5,15 +5,16 @@
     <head>
         <meta charset="utf-8">
         <title>Pancake</title>
+        <link href="../styles.css" rel="stylesheet">
     </head>
     <body>
-        <h1>Pancake</h1>
-        <p>This easy pancake recipe doesn't require much thought early in the morning and the pancakes taste great!</p>
+        <h1 class="recipe-title">Pancake</h1>
+        <p class="recipe-subtitle">This easy pancake recipe doesn't require much thought early in the morning and the pancakes taste great!</p>
         <img width="500px" alt="pancake" src="https://images-gmi-pmc.edge-generalmills.com/df109202-f5dd-45a1-99b4-f10939afd509.jpg">
-        <h2>Description</h2>
+        <h2 class="recipe-heading">Description</h2>
         <p>This quick and easy pancake recipe puts the store-bought stuff to shame.</p>
-        <h2>Ingredients</h2>
-        <ul>
+        <h2 class="recipe-heading">Ingredients</h2>
+        <ul class="unordered-list">
             <li>A cup of all-purpose flour</li>
             <li>Two tablespoons of white sugar</li>
             <li>Baking powder</li>
@@ -22,8 +23,8 @@
             <li>Oil</li>
             <li>An egg</li>
         </ul>
-        <h2>Steps</h2>
-        <ol>
+        <h2 class="recipe-heading">Steps</h2>
+        <ol class="ordered-list">
             <li>Combine the dry ingredients.</li>
             <li>Add the wet ingredients and mix.</li>
             <li>Pour or ladle the batter onto the oiled griddle or pan.</li>
